<resources>
    <string name="app_name">UNISO APP</string>
    <string name="description">Founded in 2005, Jaamacadda Soomaaliya (University of Somalia) is a non-profit private higher-education institution located in the urban setting of the metropolis of Mogadishu (population range of 1,000,000-5,000,000 inhabitants), Banaadir. This institution also has a branch campus in Ceelasha Biyaha. Officially recognized by the Ministry of Education, Culture and Higher Education of Somalia, Jaamacadda Soomaaliya (UNISO) is a medium-sized (uniRank enrollment range: 8,000-8,999 students) coeducational Somali higher education institution formally affiliated with the Islamic religion. Jaamacadda Soomaaliya (UNISO) offers courses and programs leading to officially recognized higher education degrees in several areas of study. See the uniRank degree levels and areas of study matrix below for further details. This 17 years old Somali higher-education institution has a selective admission policy based on entrance examinations. The admission rate range is 60-70% making this Somali higher education organization a somewhat selective institution. International students are welcome to apply for enrollment. UNISO also provides several academic and non-academic facilities and services to students including a library, housing, sports facilities, study abroad and exchange programs, online courses and distance learning opportunities, as well as administrative services.</string>
    <string name="topic">University Overview</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="log">Login</string>
    <string name="todo">TODO</string>
    <string name="enter_username">Enter Username</string>
    <string name="About"> Where does it come from?
Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.

The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham. </string>
    <string name="unisoAbout">ABOUT US</string>
    <string name="todo_app">Todo App</string>
    <string name="tasks">Enter Tasks</string>
    <string name="submit">Submit</string>
</resources>