<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/uniso"
    tools:context=".LoginApp">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/logolg"
        android:scaleType="fitCenter"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:padding="15dp"
            android:textColorHighlight="@color/black"
            android:textAllCaps="true"
            android:text="@string/log"/>

    <EditText
        android:id="@+id/txtuser"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:drawableEnd="@drawable/email_icon"
        android:background="@drawable/loginshape"
        android:inputType="textPersonName"
        android:hint="@string/enter_username"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/txtpass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:drawableEnd="@drawable/lock_icon"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/loginshape"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:autofillHints="" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/loginshape"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/login" />


</LinearLayout>