<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/logolg"
            android:scaleType="fitCenter"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unisoAbout"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/About"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp" />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>